added login page

--- a/frontend/Active-learning-project/src/app/app.component.html
+++ b/frontend/Active-learning-project/src/app/app.component.html
@@ -1,8 +1,1 @@
-<p>
-  Start editing to see some magic happen :)
-</p>
-
-<button (click)="showSuccess()">Success</button>
-<button (click)="showError()">Error</button>
-<button (click)="showInfo()">Info</button>
-<button (click)="showWarning()">Warning</button>
+<router-outlet></router-outlet>
