--- a/frontend/Active-learning-project/src/app/account/signin/signin.component.html
+++ b/frontend/Active-learning-project/src/app/account/signin/signin.component.html
@@ -35,20 +35,12 @@
         </a>
     </div>
     <div class="form-group">
-       
-            <p class="text-center fw-bold my-4 mx-3 mb-0 text-muted">OR</p>
-            <!-- <hr class="my-4"> -->
+        <p class="text-center fw-bold my-4 mx-3 mb-0 text-muted">OR</p>
         <br>
         <a class="btn text-white btn-lg btn-block" style="background-color: #000" role="button">
             <i class="fab fa-facebook-f me-2"></i>Continue with Github
         </a>
-        <a class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
-        type="submit"><i class="fab fa-google me-2"></i>Continue with Google Account</a>
-    </div>
-
-    <div class="form-group">
-        <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a mat-button class="menu-button" class="btn btn-forgot text-primary" routerLink="/board">
-            <span>Register here</span>
-        </a></p>
+        <a class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;" type="submit"><i
+                class="fab fa-google me-2"></i>Continue with Google Account</a>
     </div>
 </form>
