--- a/frontend/Active-learning-project/src/styles.css
+++ b/frontend/Active-learning-project/src/styles.css
@@ -11,3 +11,5 @@ body {
   flex: 1 1 auto;
 }
 
+/* client id : 201265733783-d3kgq26fchp10invlmag4apf3gm5jdt7.apps.googleusercontent.com  */
+/* client secrets : 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 */
