--- a/frontend/Active-learning-project/src/app/user-authentication/signin/github-signin/github-signin.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/signin/github-signin/github-signin.component.html
@@ -1,1 +1,1 @@
-<a [href]="githubLoginUrl" class="btn btn-light">Sign in with GitHub</a>
+<a [href]="this.githubLoginUrl" class="btn btn-light">Sign in with GitHub</a>
