--- a/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
@@ -128,15 +128,10 @@
     </div>
     <div class="auth-connections">
       <div class="auth-github">
-        <img
-          oncontextmenu="return false;"
-          src="../../../assets/icons/github.svg"
-          alt="github auth"
-        />
-        <span>Github Sign Up</span>
+        <alp-github-button [btnType]="'signup'"></alp-github-button>
       </div>
       <div class="auth-google">
-        <alp-google-signup></alp-google-signup>
+        <alp-google-button [btnType]="'signup'"></alp-google-button>
       </div>
     </div>
     <div class="auth-signup-link text-center">
