User Auth Updates

--- a/frontend/Active-learning-project/src/app/user-authentication/github-button/github-button.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/github-button/github-button.component.html
@@ -1,4 +1,5 @@
 <div class="d-flex gitSignBtn">
-  <img src="../../../../assets/icons/github.svg" alt="github" />
-  <a [href]="githubLoginUrl" class="btn btn-light">{{btnTitle}}</a>
+  <a [href]="githubLoginUrl" class="btn btn-light">
+    <img src="../../../../assets/icons/github.svg" alt="github" />&nbsp;{{ btnTitle }}
+  </a>
 </div>
