--- a/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
@@ -137,7 +137,7 @@
     <div class="auth-signup-link text-center">
       <i
         >Already have an account?
-        <a [routerLink]="['/', 'auth', 'user', 'signin']">Sign In</a></i
+        <a href="/auth/user/signin">Sign In</a></i
       >
     </div>
   </div>
