--- a/frontend/Active-learning-project/src/app/user-authentication/signin/signin.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/signin/signin.component.html
@@ -13,10 +13,10 @@
     </div>
     <div class="auth-connections">
       <div class="auth-github">
-        <alp-github-signin></alp-github-signin>
+        <alp-github-button [btnType]="'signin'"></alp-github-button>
       </div>
       <div class="auth-google">
-        <alp-google-signin></alp-google-signin>
+        <alp-google-button [btnType]="'signin'"></alp-google-button>
       </div>
     </div>
     <div class="auth-alternate">
@@ -40,20 +40,9 @@
           formControlName="email"
           class="form-control"
           [ngClass]="{
-            'is-invalid': submitted && controls['email'].errors
+            isInvalid: isFormControlTouched('email') && hasError('email')
           }"
         />
-        <div
-          *ngIf="submitted && controls['email'].errors"
-          class="invalid-feedback"
-        >
-          <div *ngIf="controls['email'].errors['required']">
-            Email is required
-          </div>
-          <div *ngIf="controls['email'].errors['email']">
-            Email must be a valid email address
-          </div>
-        </div>
       </div>
       <div class="form-group">
         <label class="fw-bold mb-0 text-muted" for="password">Password</label>
@@ -63,29 +52,31 @@
           formControlName="password"
           class="form-control"
           [ngClass]="{
-            'is-invalid': submitted && controls['password'].errors
+            isInvalid: isFormControlTouched('password') && hasError('password')
           }"
         />
-        <div
-          *ngIf="submitted && controls['password'].errors"
-          class="invalid-feedback"
-        >
-          <div *ngIf="controls['password'].errors['required']">
-            Password is required
-          </div>
-        </div>
       </div>
       <div class="form-group auth-login">
         <button
-          [disabled]="loading"
+          [disabled]="isBtnLocked"
           class="btn btn-dark form-control"
           routerLink="/board"
+          [ngClass]="{
+            invalidCreds: hasError('email') && hasError('password')
+          }"
         >
-          <span
-            *ngIf="loading"
-            class="spinner-border spinner-border-sm mr-1"
-          ></span>
-          Sign in
+          <span *ngIf="!hasError('email') && !hasError('password')">
+            <span
+              *ngIf="loading"
+              class="spinner-border spinner-border-sm mr-1"
+            ></span>
+            Sign in
+          </span>
+          <span 
+            class="invalidFeedback"
+            *ngIf="hasError('email') && hasError('password')">
+            Invalid Login Credentials
+          </span>
         </button>
         <a
           mat-button
@@ -100,7 +91,7 @@
     <div class="auth-signup-link text-center">
       <i
         >Don't have an account?
-        <a [routerLink]="['/', 'auth', 'user', 'signup']">Sign Up</a></i
+        <a href="/auth/user/signup">Sign Up</a></i
       >
     </div>
   </div>
