changed placeholder text

--- a/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
+++ b/frontend/Active-learning-project/src/app/user-authentication/signup/signup.component.html
@@ -62,7 +62,7 @@
       <div class="form-group">
         <label class="fw-bold mb-0 text-muted" for="email">Email</label>
         <input
-          placeholder="john.doe@example.com"
+          placeholder="Enter email address"
           type="text"
           formControlName="email"
           class="form-control"
