--- a/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
@@ -11,10 +11,12 @@
 				</div>
 				<div class="form-group col-md-3"></div>
 				<div class="form-group col-md-3">
-					<a class="btn btn-outline-primary" role="button">Active <a class="bg-secondary btn-sm">22</a></a>
-					<a class="btn btn-outline-primary" role="button">Deactivate <a
-							class="bg-secondary btn-sm">22</a></a>
-					<a class="btn btn-outline-primary" role="button">All <a class="bg-secondary btn-sm">44</a></a>
+					<a class="btn btn-outline-primary" role="button" (click)="filterActivateUsers()">Active <a
+							class="bg-secondary btn-sm" >{{activeCount}}</a></a>
+					<a class="btn btn-outline-primary" role="button" (click)="filterDeactivateUsers()">Deactivate <a
+							class="bg-secondary btn-sm">{{deactiveCount}}</a></a>
+					<a class="btn btn-outline-primary" role="button" (click)="filterAllUsers()">All <a
+							class="bg-secondary btn-sm">{{allCount}}</a></a>
 				</div>
 			</div>
 		</div>
@@ -53,8 +55,8 @@
 						<td>{{user.roles}}</td>
 						<td>80%</td>
 						<td>
-							<a *ngIf="user.action == 'Deactivate'" class="btn btn-danger">{{user.action}}</a>
-							<a *ngIf="user.action == 'Activate'" class="btn btn-success">{{user.action}}</a>
+
+							<alp-modal [user]="user"></alp-modal>
 							|
 							<a class="btn btn-info">View</a>
 							|
