--- a/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
@@ -1,15 +1,18 @@
-<a *ngIf="user.action == 'Activate'" class="btn btn-success" data-toggle="modal"
-    data-target="#staticBackdrop">{{user.action}}</a>
-<a *ngIf="user.action == 'Deactivate'" class="btn btn-danger" data-toggle="modal"
-    data-target="#staticBackdrop">{{user.action}}</a>
-
+<a *ngIf="user.action == 'Activate'" class="btn btn-success" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked(user.action)">{{user.action}}</a>
+<a *ngIf="user.action == 'Deactivate'" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked(user.action )">{{user.action}}</a>
+|
+<a class="btn btn-info">View</a>
+|
+<a class="btn btn-warning">Update</a>
 
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">{{btnType}} user</h5>
+                <h5 class="modal-title" id="staticBackdropLabel">Action user</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
