--- a/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
@@ -1,7 +1,7 @@
-<a *ngIf="user.action == 'Activate'" class="btn btn-success" data-toggle="modal" data-target="#staticBackdrop"
-    (click)="onActionButtonClicked(user.action)">{{user.action}}</a>
-<a *ngIf="user.action == 'Deactivate'" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop"
-    (click)="onActionButtonClicked(user.action )">{{user.action}}</a>
+<a *ngIf="user.isActive" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked(user.isActive)">Deactivate</a>
+<a *ngIf="!user.isActive" class="btn btn-success" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked(user.isActive)">Activate</a>
 |
 <a class="btn btn-info">View</a>
 |
