--- a/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
@@ -12,59 +12,14 @@
 				<div class="form-group col-md-3"></div>
 				<div class="form-group col-md-3">
 					<a class="btn btn-outline-primary" role="button">Active <a
-							class="bg-secondary btn-sm" (click)="getAllActiveUsers()">{{countAllActiveUsers}}</a></a>
+							class="bg-secondary btn-sm">44</a></a>
 					<a class="btn btn-outline-primary" role="button">Inactive<a
-							class="bg-secondary btn-sm" (click)="getAllInActiveUsers()">{{countAllDeactivatedUsers}}</a></a>
-					<a class="btn btn-outline-primary" role="button" (click)="getAllUser()">All <a
-							class="bg-secondary btn-sm">{{countAllUsers}}</a></a>
+							class="bg-secondary btn-sm" >45</a></a>
+					<a class="btn btn-outline-primary" role="button" >All <a
+							class="bg-secondary btn-sm">44</a></a>
 				</div>
 			</div>
 		</div>
-		<div class="card-body">
-			<table class="table table-responsive  table-striped">
-				<thead class="bg-dark text-white">
-					<tr>
-						<th>
-							ID</th>
-						<th>
-							NAME</th>
-						<th>
-							EMAIL</th>
-						<th>
-							COURSE</th>
-						<th>
-							JOINED</th>
-						<th>
-							LAST SEEN</th>
-						<th>
-							ROLES</th>
-						<th>
-							PROVIDER</th>
-						<th>
-							ACTIONS</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr *ngFor="let user of usersList">
-						<td>{{user.id}}</td>
-						<td>{{user.lastname}} {{user.firstname}}</td>
-						<td>{{user.username}}</td>
-						<td>{{user.course?.name}}</td>
-						<td>{{user.joined | date:'mediumDate'}}</td>
-						<td>{{user.lastSeen | date:'mediumDate'}}</td>
-						<td>
-							<span *ngFor="let role of user.roles">
-								{{role.name | removeRoleAndUnderScore}}
-								<br>
-							</span>
-						</td>
-						<td>{{user.provider}}</td>
-						<td>
-							<alp-modal [user]="user"></alp-modal>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
+		<router-outlet></router-outlet>
 	</div>
 </div>
