--- a/frontend/Active-learning-project/src/app/master-layout/master-layout.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/master-layout.component.html
@@ -1,1 +1,22 @@
-<p>master-layout works!</p>
+<div class="fluid-container bg-light h-100 master">
+  <div class="row m-0 h-100 viewwrapper">
+    <div class="col-lg-2 sidebar">
+      <div class="icon">
+        <fa-icon [icon]="faSolidBars" class="icon-symbol"></fa-icon>
+        <div class="logo">
+          <span>Active Learning</span>
+        </div>
+      </div>
+      <!-- Side Navigation Import -->
+      <alp-side-nav></alp-side-nav>
+    </div>
+    <div class="col-lg mainview">
+      <!-- Top Navigation Import -->
+      <alp-top-nav></alp-top-nav>
+      <!-- <router-outlet></router-outlet> -->
+      <div class="maincontent">
+        <h1 class="p-2">THIS IS THE MASTER DEFAULT ROUTING!!!</h1>
+      </div>
+    </div>
+  </div>
+</div>
