added user management to master

--- a/frontend/Active-learning-project/src/app/master-layout/master-layout.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/master-layout.component.html
@@ -15,7 +15,7 @@
       <alp-top-nav></alp-top-nav>
       <!-- <router-outlet></router-outlet> -->
       <div class="maincontent">
-        <h1 class="p-2">THIS IS THE MASTER DEFAULT ROUTING!!!</h1>
+       <alp-user-management></alp-user-management>
       </div>
     </div>
   </div>
