--- a/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.css
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.css
@@ -13,3 +13,11 @@ table {
 .card-body{
   padding: 0%;
 }
+
+.user-management-controls{
+  display: flex;
+  gap: .3rem;
+  align-items: center;
+  white-space: nowrap;
+  justify-content: flex-end;
+}
