--- a/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/user-management.component.html
@@ -7,7 +7,8 @@
 		<div class="form-group">
 			<div class="form-row">
 				<div class="form-group col">
-					<input type="text" class="form-control w-50" placeholder="Search id, name, email, course and roles" />
+					<input type="text" class="form-control w-50"
+						placeholder="Search id, name, email, course and roles" />
 				</div>
 				<div class="form-group col-5 user-management-controls">
 					<span>Filter by: </span>
@@ -25,35 +26,35 @@
 		</div>
 		<div class="card-body">
 			<table class="table table-responsive  table-striped">
-				<caption>User management table</caption>
+				<caption>List of users</caption>
 				<thead class="bg-dark text-white">
 					<tr>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('id')">ID</a>
+							<a class="btn" (click)="onChangeSortBy('id')">ID</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('lastname')">NAME</a>
+							<a class="btn" (click)="onChangeSortBy('lastname')">NAME</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('username')">EMAIL</a>
+							<a class="btn" (click)="onChangeSortBy('username')">EMAIL</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('course')">COURSE</a>
+							<a class="btn" (click)="onChangeSortBy('course')">COURSE</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('joined')">JOINED</a>
+							<a class="btn" (click)="onChangeSortBy('joined')">JOINED</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('lastSeen')">LAST SEEN</a>
+							<a class="btn" (click)="onChangeSortBy('lastSeen')">LAST SEEN</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('roles')">ROLES</a>
+							<a class="btn" (click)="onChangeSortBy('roles')">ROLES</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('provider')">PROVIDER</a>
+							<a class="btn" (click)="onChangeSortBy('provider')">PROVIDER</a>
 						</th>
 						<th>
-							<a class="btn" onclick="onChangeSortBy('actions')">ACTIONS</a>
+							<a class="btn">ACTIONS</a>
 						</th>
 					</tr>
 				</thead>
@@ -77,6 +78,19 @@
 						</td>
 					</tr>
 				</tbody>
+				<nav aria-label="Page navigation example">
+					<ul class="pagination justify-content-end">
+						<li class="page-item disabled">
+							<a class="page-link" href="#" tabindex="-1">Previous</a>
+						</li>
+						<li class="page-item"><a class="page-link" href="#">1</a></li>
+						<li class="page-item"><a class="page-link" href="#">2</a></li>
+						<li class="page-item"><a class="page-link" href="#">3</a></li>
+						<li class="page-item">
+							<a class="page-link" href="#">Next</a>
+						</li>
+					</ul>
+				</nav>
 			</table>
 		</div>
 	</div>
