--- a/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/user-management/modal/modal.component.html
@@ -1,28 +1,93 @@
 <a *ngIf="user.isActive" class="btn btn-danger" data-toggle="modal" data-target="#staticBackdrop"
-    (click)="onActionButtonClicked(user.isActive)">Deactivate</a>
+    (click)="onActionButtonClicked('Deactivate')">Deactivate</a>
 <a *ngIf="!user.isActive" class="btn btn-success" data-toggle="modal" data-target="#staticBackdrop"
-    (click)="onActionButtonClicked(user.isActive)">Activate</a>
+    (click)="onActionButtonClicked('Activate')">Activate</a>
 |
-<a class="btn btn-info">View</a>
+<a class="btn btn-info" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked('View')">View</a>
 |
-<a class="btn btn-warning">Update</a>
+<a class="btn btn-warning" data-toggle="modal" data-target="#staticBackdrop"
+    (click)="onActionButtonClicked('Update')">Update</a>
 
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1"
     aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="staticBackdropLabel">Action user</h5>
+                <h5 class="modal-title" id="staticBackdropLabel">{{modalTittle}}</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <span class="ai-user"></span>
+                <div class="card bg-dark text-white">
+                    <div class="card-body d-flex flex-column">
+                        <form class="form-horizontal" role="form">
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control" id="name" formControlName="name"
+                                        value="{{user.lastname | titlecase}} {{user.firstname | titlecase}}"
+                                        [disabled]="disableInputs" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="email">Email</label>
+                                    <input type="text" class="form-control" id="email" placeholder="email"
+                                        formControlName="email" value="{{user.username}}" [disabled]="disableInputs" />
+
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="course">Course</label>
+                                    <input type="text" class="form-control" id="course" placeholder="WEB DEVELOPMENT"
+                                        formControlName="course" value="{{user.course?.name}}"
+                                        [disabled]="disableInputs" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="dateJoined">Date joined</label>
+                                    <input type="date" class="form-control" id="dateJoined" formControlName="dateJoined"
+                                        value="{{user.joined | date:'mediumDate'}}" [disabled]="disableInputs" />
+                                </div>
+                            </div>
+
+
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="lastSeen">Last seen</label>
+                                    <input type="date" class="form-control" id="lastSeen" formControlName="lastSeen"
+                                        value="{{user.lastSeen  | date:'mediumDate'}}" [disabled]="disableInputs" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="role">Roles</label>
+                                    <input type="text" class="form-control" id="role" formControlName="role"
+                                        value="{{user.roles | arrayToString | removeRoleAndUnderScore}}"
+                                        [disabled]="disableInputs" />
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="Provider">Provider</label>
+                                    <input type="text" class="form-control" id="provider" formControlName="lastSeen"
+                                        value="{{user.provider}}" [disabled]="disableInputs" />
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="githubUsername">Github Username</label>
+                                    <select id="githubUsername" class="form-control" formControlName="githubUsername">
+
+                                    </select>
+                                </div>
+                            </div>
+
+                        </form>
+                    </div>
+                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Understood</button>
+                <button type="button" class="btn btn-primary">{{btnMessage}}</button>
             </div>
         </div>
     </div>
