--- a/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/user-management.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/user-management/user-management.component.html
@@ -62,8 +62,13 @@
 					<tr *ngFor="let user of usersList">
 						<td>
 							<div class="d-flex align-items-center">
-								<img src="{{user.avatar}}" alt="" style="width: 45px; height: 45px"
+
+								<img *ngIf="user.avatar else noAvatar" src="{{user.avatar}}" alt="" style="width: 45px; height: 45px"
 									class="rounded-circle" />
+								<ng-template #noAvatar>
+									<img src="https://gravatar.com/avatar/acd90609602c8a2a5374fc1c3bf9ece1?s=400&d=robohash&r=x" alt="" style="width: 45px; height: 45px"
+										class="rounded-circle" />
+								</ng-template>
 								<div class="ms-3">
 									<p class="fw-bold mb-1">{{user.lastname | titlecase}} {{user.firstname | titlecase}}
 									</p>
