added initial backend

--- a/frontend/Active-learning-project/src/app/master-layout/layouts/master/master-layout.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/master/master-layout.component.html
@@ -13,9 +13,8 @@
     <div class="col-lg mainview">
       <!-- Top Navigation Import -->
       <alp-top-nav></alp-top-nav>
-      <!-- <router-outlet></router-outlet> -->
       <div class="maincontent">
-        <alp-user-management></alp-user-management>
+        <router-outlet></router-outlet>
       </div>
     </div>
   </div>
