--- a/frontend/Active-learning-project/src/app/master-layout/navigation/side-nav/side-nav.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/navigation/side-nav/side-nav.component.html
@@ -1,1 +1,6 @@
-<p class="text-warning">side-nav works!</p>
+<div class="sidebar">
+    <a ><i class="fa fa-fw fa-envelope"></i> Dashboard</a>
+    <a><i class="fa fa-fw fa-user"></i> Kanban</a>
+    <a routerLink="/alp/users"><i class="fa fa-fw fa-home"></i> Users</a>
+    <a routerLink="/alp/courses"><i class="fa fa-fw fa-wrench"></i> Courses</a>
+</div>
