--- a/frontend/Active-learning-project/src/app/master-layout/layouts/master/master-layout.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/layouts/master/master-layout.component.html
@@ -4,7 +4,7 @@
       <div class="icon">
         <fa-icon [icon]="faSolidBars" class="icon-symbol"></fa-icon>
         <div class="logo">
-          <span>Active Learning</span>
+          <span>Active Learning Platform</span>
         </div>
       </div>
       <!-- Side Navigation Import -->
