--- a/frontend/Active-learning-project/src/app/master-layout/navigation/top-nav/top-nav.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/navigation/top-nav/top-nav.component.html
@@ -1,18 +1,20 @@
 <div class="row m-0 w-100 top-nav">
-  <div class="d-flex col-lg-10 search-tool">
-    <div class="toggle-sidebar">
-      <fa-icon [icon]="faSolidBars" id="menubar"></fa-icon>
+  <div class="d-flex col-lg col-md col search-tool">
+    <div class="topnav-logo">
+      <fa-icon [icon]="graduation" class="topIcon"></fa-icon>
+      <span>ALP</span>
     </div>
     <div class="searchbox">
 			<fa-icon [icon]="searchIcon" class="searchInput"/>
       <input
         type="text"
         class="form-control search-input"
-        placeholder="Search python course..."
+        placeholder="Search course..."
       />
     </div>
   </div>
-  <div class="profile col-lg-2">
+  <div class="profile col-lg col-md col">
     <alp-user-profile></alp-user-profile>
+    <fa-icon [icon]="faSolidBars" class="topIcon" (click)="toggleMenu()"></fa-icon>
   </div>
 </div>
