--- a/frontend/Active-learning-project/src/app/master-layout/navigation/side-nav/side-nav.component.html
+++ b/frontend/Active-learning-project/src/app/master-layout/navigation/side-nav/side-nav.component.html
@@ -1,32 +1,53 @@
 <div class="sidebar">
-  <a routerLink="/alp/dashboard" routerLinkActive="active">
+  <a routerLink="/alp/dashboard" routerLinkActive="active" (click)="closeMenu()">
     <div>
       <fa-icon class="icon" [icon]="dashboard"></fa-icon>
     </div>
     <div>Dashboard</div>
   </a>
-  <a routerLink="/alp/courses" routerLinkActive="active">
+  <a routerLink="/alp/courses" routerLinkActive="active" (click)="closeMenu()">
     <div>
       <fa-icon class="icon" [icon]="courses"></fa-icon>
     </div>
     <div>Courses</div>
   </a>
-  <a routerLink="/alp/assignments" routerLinkActive="active">
+  <a routerLink="/alp/assignments" routerLinkActive="active" (click)="closeMenu()">
     <div>
       <fa-icon class="icon" [icon]="assignments"></fa-icon>
     </div>
     <div>Assignments</div>
   </a>
-  <a routerLink="/alp/users" routerLinkActive="active">
+  <a routerLink="/alp/users" routerLinkActive="active" (click)="closeMenu()">
     <div>
       <fa-icon class="icon" [icon]="users"></fa-icon>
     </div>
     <div>Users</div>
   </a>
-  <a routerLink="/alp/settings" routerLinkActive="active">
+  <a routerLink="/alp/community" routerLinkActive="active" (click)="closeMenu()">
     <div>
-      <fa-icon class="icon" [icon]="settings"></fa-icon>
+      <fa-icon class="icon" [icon]="community"></fa-icon>
     </div>
-    <div>Settings</div>
+    <div>Community</div>
   </a>
+  <a routerLink="/alp/playground" routerLinkActive="active" (click)="closeMenu()">
+    <div>
+      <fa-icon class="icon" [icon]="playground"></fa-icon>
+    </div>
+    <div>Playground</div>
+  </a>
+  <hr style="color: #fff" />
+  <div class="config">
+    <a routerLink="/alp/settings" routerLinkActive="active" (click)="closeMenu()">
+      <div>
+        <fa-icon class="icon" [icon]="settings"></fa-icon>
+      </div>
+      <div>Settings</div>
+    </a>
+    <a routerLinkActive="active" (click)="signOut()">
+      <div>
+        <fa-icon class="icon" [icon]="logout"></fa-icon>
+      </div>
+      <div>Logout</div>
+    </a>
+  </div>
 </div>
