--- a/frontend/Active-learning-project/src/app/master-layout/navigation/top-nav/top-nav.component.css
+++ b/frontend/Active-learning-project/src/app/master-layout/navigation/top-nav/top-nav.component.css
@@ -1,33 +1,31 @@
 .top-nav {
   display: flex;
-  background-color: rgb(231, 231, 228);
+  background-color: rgb(108, 199, 199);
   align-items: center;
-  border-radius: 10px;
-  padding: 0.1rem;
-  height: var(--top-nav-height);
+  border-radius: 5px 5px 0 0;
+  padding: 0.5rem;
 }
 
-.top-nav .toggle-sidebar {
+.top-nav .topnav-logo {
   position: relative;
-  display: flex;
-  font-size: 15pt;
+  display: none;
   align-items: center;
   justify-content: center;
-  color: white;
-  background-color: rgb(173, 126, 64);
-  border-radius: 50%;
-  width: calc(var(--top-nav-height) - var(--top-nav-offset));
   height: calc(var(--top-nav-height) - var(--top-nav-offset));
   padding: 0.1rem;
   transition: all 0.5s;
 }
 
-.top-nav .toggle-sidebar:hover {
-  cursor: pointer;
+.top-nav .topnav-logo .topIcon { 
+  font-size: 19pt;
 }
 
-.search-tool {
-  gap: 0.5rem;
+.top-nav .topnav-logo span{
+  font-weight: bold;
+}
+
+.top-nav .topnav-logo:hover {
+  cursor: pointer;
 }
 
 .search-tool .searchbox {
@@ -52,4 +50,43 @@
 .searchbox .search-input {
   border-radius: 40px;
   padding-left: calc(var(--top-nav-search-padding-left) + calc(var(--top-nav-search-padding-left)/4));
+}
+
+.top-nav .profile{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 1rem;
+}
+
+.top-nav .profile .topIcon{
+  font-size: 18pt;
+  border: 1px solid #000;
+  color: #000;
+  border-radius: 7px;
+  padding-left: 4px;
+  padding-right: 4px;
+  cursor: pointer;
+  display: none;
+}
+
+@media only screen and (max-width: 1120px) {
+  .top-nav{
+    border-radius: 0;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .top-nav .topnav-logo {
+    display: flex;
+    gap: .3rem;
+  }
+
+  .search-tool .searchbox {
+    display: none;
+  }
+
+  .top-nav .profile .topIcon{
+    display: block;
+  }
 }
